<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    tools:context=".MainActivity"
    android:orientation="vertical" 
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_round_corner_edittext"
            android:ems="10"
            android:padding="5dp"
             >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_round_corner_edittext"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp"
             >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:orientation="horizontal" 
 		android:layout_marginTop="20dp">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="20px"
            android:text="@string/Login" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="20px"
            android:text="@string/register" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword" />
    </RelativeLayout>

</LinearLayout>